--- a/playbooks/roles/info_common/tasks/uname.yaml
+++ b/playbooks/roles/info_common/tasks/uname.yaml
@@ -6,7 +6,7 @@
 
 - name: File uname
   delegate_to: localhost
-  throttle: "{{ ansible_facts.processor_vcpus }}"
+  throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/all_uname"
