--- a/playbooks/roles/info_common/tasks/log-issue.yaml
+++ b/playbooks/roles/info_common/tasks/log-issue.yaml
@@ -19,7 +19,7 @@
 
 - name: Findings
   when: _result.stdout
-  throttle: "{{ ansible_facts.processor_vcpus }}"
+  throttle: "{{ concurrent_local_jobs }}"
   block:
     - name: Findings since {{ log_system_since }}
       delegate_to: localhost
@@ -37,6 +37,7 @@
       register: _config_fname
 
     - name: Download Linux kernel config
+      throttle: "{{ concurrent_local_jobs }}"
       ansible.builtin.fetch:
         src: "{{ _config_fname.stdout }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.config"
