--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -11,7 +11,7 @@
 
 - name: File connections
   delegate_to: localhost
-  throttle: "{{ ansible_facts.processor_vcpus }}"
+  throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/snowflake_connections"
