--- a/playbooks/roles/info_tor/tasks/ddos.yaml
+++ b/playbooks/roles/info_tor/tasks/ddos.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Download DDoS IpSets
-  throttle: "{{ ansible_facts.processor_vcpus }}"
+  throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.fetch:
     src: "/var/tmp/{{ item }}-{{ tor_port }}"
     dest: "{{ tmp_dir }}/ddos/{{ inventory_hostname }}.{{ item }}-{{ tor_port }}"
