--- a/playbooks/roles/info_tor/tasks/metrics.yaml
+++ b/playbooks/roles/info_tor/tasks/metrics.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Metrics for Prometheus
   delegate_to: localhost
-  throttle: "{{ ansible_facts.processor_vcpus }}"
+  throttle: "{{ concurrent_local_jobs }}"
   when: tor_metrics and metrics_port
   ansible.builtin.lineinfile:
     line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
