--- a/playbooks/roles/info_common/tasks/log-issue.yaml
+++ b/playbooks/roles/info_common/tasks/log-issue.yaml
@@ -37,8 +37,9 @@
       register: _config_fname
 
     - name: Download Linux kernel config
+      delegate_to: localhost
       throttle: "{{ concurrent_local_jobs }}"
-      ansible.builtin.fetch:
+      ansible.posix.synchronize:
+        mode: pull
         src: "{{ _config_fname.stdout }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.config"
-        flat: true
