factor out metrics info into an own role

--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -3,15 +3,18 @@
   hosts: "!snowflake:!tor"
   roles:
     - role: info_common
+    - role: info_metrics
 
 - name: Info Snowflake
   hosts: snowflake
   roles:
     - role: info_common
+    - role: info_metrics
     - role: info_snowflake
 
 - name: Info Tor
   hosts: tor
   roles:
     - role: info_common
+    - role: info_metrics
     - role: info_tor
