--- a/playbooks/roles/ca/tasks/main.yaml
+++ b/playbooks/roles/ca/tasks/main.yaml
@@ -9,19 +9,21 @@
     - ca
     - never
   block:
-    - name: Create local directories for Root CA
+    - name: Create local directories for Root CA and client certificates
       delegate_to: localhost
       ansible.builtin.file:
         state: directory
         path: "{{ ca_dir }}/{{ ca_name }}/clients/{{ item }}/"
         mode: "0755"
       with_items:
-        - certs
+        - crts
         - csrs
         - keys
+
     - name: Generate Root CA private key
       community.crypto.openssl_privatekey:
         path: "{{ ca_dir }}/{{ ca_name }}/{{ ca_name }}.key"
+
     - name: Generate Root CA CSR
       community.crypto.openssl_csr:
         path: "{{ ca_dir }}/{{ ca_name }}/{{ ca_name }}.csr"
@@ -36,6 +38,7 @@
           - digitalSignature
           - cRLSign
         key_usage_critical: true
+
     - name: Generate Root CA certificate
       community.crypto.x509_certificate:
         path: "{{ ca_dir }}/{{ ca_name }}/{{ ca_name }}.crt"
