throttle go build b/c go modules of torproject might be used too

--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -44,7 +44,7 @@
   register: _snowflake_patched
 
 - name: Build
-  retries: 6
+  throttle: "{{ torproject_connections }}"
   changed_when: false
   ansible.builtin.command:
     cmd: go build -v
