--- a/playbooks/roles/info_common/tasks/uptime.yaml
+++ b/playbooks/roles/info_common/tasks/uptime.yaml
@@ -10,7 +10,7 @@
 
 - name: File uptime
   delegate_to: localhost
-  throttle: "{{ concurrent_local_jobs }}"
+  throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} Uptime {{ _result.stdout }}"
     path: "{{ tmp_dir }}/all_uptime"
