--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -21,6 +21,7 @@
   ansible.builtin.systemd_service:
     name: tor
     state: reloaded
+    no_block: true
 
 - name: Restart Tor
   listen: "Restart Tor"
