--- a/playbooks/roles/info_common/tasks/firewall.yaml
+++ b/playbooks/roles/info_common/tasks/firewall.yaml
@@ -3,7 +3,7 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      conntrack -S |
+      conntrack -S 2>/dev/null |
         grep -v ' insert_failed=0 drop=0 ' |
         awk '{ print $1, $5, $6 }' |
         cut -f 2- -d ':' |
@@ -20,7 +20,8 @@
 
 - name: Get ct counter
   changed_when: false
-  ansible.builtin.command: conntrack -C
+  failed_when: false
+  ansible.builtin.command: conntrack -C 2>/dev/null
   register: _result
 
 - name: File ct counter
