--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -75,7 +75,7 @@
           when: ansible_facts.system_vendor == 'QEMU'
           ansible.builtin.import_tasks: ipv6-ionos.yaml
 
-        - name: Ensure Ipv6 address is global scope
+        - name: Ensure IPv6 address is global scope
           failed_when: ansible_facts.default_ipv6.address is match('fe80::')
           ansible.builtin.debug:
             var: ansible_facts.default_ipv6
