--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -11,9 +11,9 @@ lyrebird_prune_git_repo: false
 
 tor_debian_target: "" # e.g. "tor-nightly-main-bookworm", default is the stable package
 
-# additional torrc values
-torrc_config_info: []
-torrc_config_host: []
+# 2 lists for additional torrc values
+torrc_config_group: []
+torrc_config_hosts: []
 
 # safe default: Tor private bridge
 bridge_distribution: "none"
@@ -31,5 +31,3 @@ ddos_metrics: false
 ddos_allow_prometheus: ""
 ddos_add_bridge_v4: ""
 ddos_add_bridge_v6: ""
-
-my_family: ""
