fix copy of family key

--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -12,7 +12,8 @@
     src: logrotate.tor.j2
     dest: /etc/logrotate.d/tor
 
-- name: Copy the secret_family_key file if given
+- name: Copy the secret_family_key file to a server
+  when: secret_family_key
   ansible.builtin.copy:
     src: "{{ secret_family_key }}"
     dest: /var/lib/tor/keys/
